[package]
name = "gawain"
version = "0.1.0"
authors = ["Matt Gaughan"]
description = "A package to gather data from software repositories, quickly."
readme = "README.md"
homepage = "https://github.com/mjgaughan/gawain"
license= "GPL-3.0"
license-file= "LICENSE"
rust-version = "1.78.0"

[dependencies]
git2 = "0.19.0"
